Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83135

QMainWindow may create unnecessary tab bars for tabified dock widgets if not visible

    XMLWordPrintable

Details

    • 70ad4042033219d9cafc66f7b6365aa0caeeee3e (qt/qtbase/dev)
    • Bug Fixing Week Q2/2020

    Description

      In a case where a QMainWindow !isVisible and

      1. adding new dock widgets
      2. tabifying the dock widgets
      3. removing and deleting dock widgets

      will result in creation of a new child tab bar each time steps 1-3 are repeated.

      Steps to reproduce:

      1. Run the attached project
      2. Click "test" button repeatedly
      3. Observe the output - the number of main window children (QTabBars) keeps increasing on each click

      Workaround: call activate on the QMainWindow::layout after step 3 or make it visible at least temporarily

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes